@@ -3,11 +3,13 @@ package nz.ac.canterbury.seng302.homehelper.unit.service;
 import nz.ac.canterbury.seng302.homehelper.dto.RenovationTaskDTO;
 import nz.ac.canterbury.seng302.homehelper.entity.RenovationRecord;
 import nz.ac.canterbury.seng302.homehelper.entity.RenovationTask;
+import nz.ac.canterbury.seng302.homehelper.entity.TaskState;
 import nz.ac.canterbury.seng302.homehelper.repository.RenovationTaskRepository;
 import nz.ac.canterbury.seng302.homehelper.service.RenovationTaskService;
 import nz.ac.canterbury.seng302.homehelper.validation.RenovationTaskValidation;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -32,12 +34,11 @@ public class RenovationTaskServiceTest {
     private RenovationTaskService renovationTaskService;
     private RenovationRecord renovationRecord;
     private RenovationTaskRepository renovationTaskRepository;
-    private RenovationTaskValidation renovationTaskValidation;
 
     @BeforeEach
     void setUp() {
         renovationTaskRepository = mock(RenovationTaskRepository.class);
-        renovationTaskValidation = new RenovationTaskValidation();
+        RenovationTaskValidation renovationTaskValidation = new RenovationTaskValidation();
         renovationTaskService = new RenovationTaskService(renovationTaskRepository, renovationTaskValidation);
         renovationRecord = new RenovationRecord();
     }
@@ -47,7 +48,7 @@ public class RenovationTaskServiceTest {
         renovationRecord.setRenovationTasks(List.of());
         Pageable pageable = PageRequest.of(0, 5);
 
-        Page<RenovationTask> result = renovationTaskService.returnTaskPages(renovationRecord, pageable);
+        Page<RenovationTask> result = renovationTaskService.returnTaskPages(renovationRecord, pageable, "all");
 
         assertEquals(0L, result.getTotalElements());
         assertTrue(result.getContent().isEmpty());
@@ -58,7 +59,7 @@ public class RenovationTaskServiceTest {
         renovationRecord.setRenovationTasks(createDummyTasks(10));
         Pageable pageable = PageRequest.of(1, 5);
 
-        Page<RenovationTask> result = renovationTaskService.returnTaskPages(renovationRecord, pageable);
+        Page<RenovationTask> result = renovationTaskService.returnTaskPages(renovationRecord, pageable, "all");
 
         assertEquals(5, result.getContent().size());
         assertEquals(10, result.getTotalElements());
@@ -70,10 +71,23 @@ public class RenovationTaskServiceTest {
 
         Pageable pageable = PageRequest.of(0, 5);
 
-        Page<RenovationTask> result = renovationTaskService.returnTaskPages(renovationRecord, pageable);
+        Page<RenovationTask> result = renovationTaskService.returnTaskPages(renovationRecord, pageable, "all");
 
         assertEquals(3, result.getContent().size());
         assertEquals(3, result.getTotalElements());
+    }
+
+    @Test
+    void returnTaskPages_filterByState_returnsCorrectPage() {
+        TaskState state = TaskState.COMPLETED;
+        List<RenovationTask> tasks = createDummyTasks(3);
+        RenovationTask renovationTask = new RenovationTask("Test task", "Test task with state", List.of("A room"), null, renovationRecord);
+        renovationTask.setState(state);
+        tasks.add(renovationTask);
+        renovationRecord.setRenovationTasks(tasks);
+        Pageable pageable = PageRequest.of(0, 5);
+        renovationTaskService.returnTaskPages(renovationRecord, pageable, "completed");
+        Mockito.verify(renovationTaskRepository, Mockito.times(1)).findByRenovationRecordAndState(renovationRecord, state);
     }
 
     private List<RenovationTask> createDummyTasks(int count) {
@@ -177,7 +191,6 @@ public class RenovationTaskServiceTest {
 
     @Test
     public void validateTaskDetails_invalidFormatRandomChar_returnInvalidDueDateError() {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy/MM/dd");
         RenovationTaskDTO renovationTaskDTO = new RenovationTaskDTO("Task One", "Some description", "NotADate", new ArrayList<>());
 
         Map<String, List<String>> expectedErrors = new HashMap<>();
@@ -226,7 +239,7 @@ public class RenovationTaskServiceTest {
         when(dummyTask.getRenovationRecord()).thenReturn(renovationRecord);
         when(renovationTaskRepository.getByDueDateBetween(any(LocalDate.class), any(LocalDate.class), any(RenovationRecord.class))).thenReturn(List.of(dummyTask));
         Map<LocalDate,  List<RenovationTask>> toTest = renovationTaskService.getTasksWithinDates(renovationRecord, startDate, endDate);
-        assertEquals(dummyTask, toTest.get(middleDate).getFirst());
+        assertEquals(dummyTask, toTest.get(middleDate).get(0));
     }
 
     @Test
@@ -237,7 +250,7 @@ public class RenovationTaskServiceTest {
         when(dummyTask.getRenovationRecord()).thenReturn(renovationRecord);
         when(renovationTaskRepository.getByDueDateBetween(any(LocalDate.class), any(LocalDate.class), any(RenovationRecord.class))).thenReturn(List.of(dummyTask));
         Map<LocalDate,  List<RenovationTask>> toTest = renovationTaskService.getTasksWithinDates(renovationRecord, startDate, startDate);
-        assertEquals(dummyTask, toTest.get(startDate).getFirst());
+        assertEquals(dummyTask, toTest.get(startDate).get(0));
     }
 
     @Test
@@ -279,8 +292,47 @@ public class RenovationTaskServiceTest {
         when(dummyTask2.getDueDate()).thenReturn(endDate);
         when(renovationTaskRepository.getByDueDateBetween(any(LocalDate.class), any(LocalDate.class), any(RenovationRecord.class))).thenReturn(List.of(dummyTask1, dummyTask2));
         Map<LocalDate,  List<RenovationTask>> toTest = renovationTaskService.getTasksWithinDates(renovationRecord, startDate, endDate);
-        assertEquals(dummyTask1, toTest.get(startDate).getFirst());
-        assertEquals(dummyTask2, toTest.get(endDate).getFirst());
+        assertEquals(dummyTask1, toTest.get(startDate).get(0));
+        assertEquals(dummyTask2, toTest.get(endDate).get(0));
+    }
+
+    @Test
+    public void addTask_validDetails_taskStateSetToNotStarted() {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+        RenovationTaskDTO renovationTaskDTO = new RenovationTaskDTO("Task 1", "New Task", LocalDate.now().plusDays(1).format(formatter), new ArrayList<>());
+        RenovationRecord renovationRecord = mock(RenovationRecord.class);
+
+        renovationTaskService.addRenovationTask(renovationTaskDTO, renovationRecord);
+
+        ArgumentCaptor<RenovationTask> taskCaptor = ArgumentCaptor.forClass(RenovationTask.class);
+        Mockito.verify(renovationTaskRepository, Mockito.times(1)).save(taskCaptor.capture());
+        RenovationTask savedTask = taskCaptor.getValue();
+
+        assertEquals(TaskState.NOT_STARTED, savedTask.getState(), "Task state should be NOT_STARTED");
+    }
+
+    @Test
+    public void parseDate_invalidDate_returnsNullNoSetDTODate() {
+        RenovationTaskDTO renovationTaskDTO = new RenovationTaskDTO();
+        renovationTaskDTO.setDueDate("lsdkfjldskfj");
+        assertNull(renovationTaskService.parseDueDate(renovationTaskDTO));
+        assertEquals("lsdkfjldskfj", renovationTaskDTO.getDueDate());
+    }
+
+    @Test
+    public void parseDueDate_validDateISO_returnsFormattedDate() {
+        RenovationTaskDTO renovationTaskDTO = new RenovationTaskDTO();
+        renovationTaskDTO.setDueDate("2020-01-01");
+        assertEquals("01/01/2020", renovationTaskService.parseDueDate(renovationTaskDTO));
+        assertEquals("01/01/2020", renovationTaskDTO.getDueDate());
+    }
+
+    @Test
+    public void parseDueDate_validDateNZ_returnsFormattedDate() {
+        RenovationTaskDTO renovationTaskDTO = new RenovationTaskDTO();
+        renovationTaskDTO.setDueDate("01/01/2020");
+        assertEquals("01/01/2020", renovationTaskService.parseDueDate(renovationTaskDTO));
+        assertEquals("01/01/2020", renovationTaskDTO.getDueDate());
     }
 }
 
